@@ -8,11 +8,6 @@
 -docstring formatting: """ everywhere
 -update_cards --> modify cards?
 
--hook up config screen
--post config issues?
--migrate settings from 1.x
--check on empty database
-
 -activate cards, belonging to these card types, having any of these tags, but none of these, ro just none of these
 -add 'update_card_active' (or something like that) to be called when
  adding cards or editing a card, so that 'active' is set correctly.
@@ -34,6 +29,8 @@ the GUI function itself?
 -card preview
 -MVC: http://doc.trolltech.com/qq/qq24-delegates.html
 
+-need for scheduler in_queue, remove_from_queue?
+
 -don't auto vacuum? what for WM?
 -more fine grained resource_limited
 
@@ -42,10 +39,6 @@ the GUI function itself?
 
 -do review_controller.rebuild_queue, reload counter after edit deck, clean duplicates, 
  activate cards
-
--upgrade from 1.x to 2.0 migration code: convert deck,
-  move latex configuration files?, import user id and config, ...
-  item --> card, fonts
 
 -Hungarian translation by bkil (announce on website)
 -hang on Spanish translation?
